# stk

./: .gitattributes  .gitignore  README.md  package.json  pnpm-workspace.yaml
apps/post/plot-Scalar/: CMakeLists.txt
apps/sim/EffectivePropertiesDesktop/core/: CMakeLists.txt
apps/sim/EffectivePropertiesDesktop/core/compare/dielectric/mupro/: parameter.in
apps/sim/EffectivePropertiesDesktop/core/compare/diffusion/mupro/: parameter.in
apps/sim/EffectivePropertiesDesktop/core/compare/elastic/mupro/: fort.72
apps/sim/EffectivePropertiesDesktop/core/compare/magnetic/suan/: out_effective_permeability.csv
apps/sim/EffectivePropertiesDesktop/core/compare/mupro-elastic/: input.in
apps/sim/EffectivePropertiesDesktop/core/include/effprop/: effprop.h
apps/sim/EffectivePropertiesDesktop/core/include/effprop/deprecate/: dielectric_electrical.h  diffusion.h
apps/sim/EffectivePropertiesDesktop/core/main/: CMakeLists.txt  input.xml  normalize.c  secret
apps/sim/EffectivePropertiesDesktop/core/main/dielectric/: initialize_dielectric.c
apps/sim/EffectivePropertiesDesktop/core/main/diffusion/: initialize_diffusion.c  load_input_diffusion.c  output_diffusion.c
apps/sim/EffectivePropertiesDesktop/core/main/elastic/: initialize_elastic.c
apps/sim/EffectivePropertiesDesktop/core/main/electrical/: calc_electrical.c  normalize_electrical.c
apps/sim/EffectivePropertiesDesktop/core/main/example_input/: input_single.xml
apps/sim/EffectivePropertiesDesktop/core/main/example_input/diffusion/: input_slab_diffusion.xml
apps/sim/EffectivePropertiesDesktop/core/main/example_input/magnetoelectric/: input_slab_magnetoelectric.xml
apps/sim/EffectivePropertiesDesktop/core/main/example_input/piezoelectric/: input_slab_piezoelectric.xml
apps/sim/EffectivePropertiesDesktop/core/main/example_input/piezomagnetic/: input_slab_piezomagnetic.xml
apps/sim/EffectivePropertiesDesktop/core/main/load_input/: load_input_control.c  load_input_dimension.c
apps/sim/EffectivePropertiesDesktop/core/main/magnetic/: solve_magnetic.c
apps/sim/EffectivePropertiesDesktop/core/main/magnetoelectric/: load_input_magnetoelectric.c  normalize_magnetoelectric.c
apps/sim/EffectivePropertiesDesktop/core/main/piezoelectric/: 99matrix  load_input_piezoelectric.c
apps/sim/EffectivePropertiesDesktop/core/main/piezomagnetic/: initialize_piezomagnetic.c
apps/sim/EffectivePropertiesDesktop/core/main/thermal/: calc_thermal.c  initialize_thermal.c  solve_thermal.c
apps/template/pyqt/: .gitattributes  .gitignore  .pypirc  README.md  fix_toml_version.py  nsisbuid_and_release.bat  preference.toml  pyproject.toml  run_write_version.py  update.json  update.py  workspace.suan
apps/template/pyqt/confs/: main.spec  preference.toml
apps/template/pyqt/scripts/: fix_toml_version.py  run_write_version.py
apps/template/pyqt/src/: build_nsis.nsi  build_nsis1.nsi  center_widget.py  custom_logger.py  info_bar.py  left_sidebar.py  main.py  main.spec  right_sidebar.py  statusbar.py  testmat.py  testpython.py  testvtk.py  toolbar.py
apps/template/pyqt/src/Updater/: autoUpdate.py  downloadFile.py  ui_winUpdate.py  updateWindow.py  文件下载模块.py  窗口_更新软件.py  自动更新功能.py  自动更新读取版本模块.py
apps/template/pyqt/src/confs/: main.spec  preference.toml
apps/template/pyqt/src/suan_pyqt_vtk_mat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cmake/: Get_Project_Version.cmake  PrepareMPI.cmake  add_FetchContent_MakeAvailable.cmake
pre/StructureGenerator/: CMakeLists.txt  structgen.column  structgen.struct
pre/StructureGenerator/examples/Composite/: script.pbs
python/data/: README.md  plot2D.py  pyproject.toml  svgLayout.py  svg_stack.py
python/data/src/stk_data/: __init__.py
python/data/src/stk_data/data_handling/: __init__.py  readDat.py
python/data/src/stk_data/drawing/: __init__.py  svgLayout.py  svg_stack.py
python/data/src/stk_data/plotting/: __init__.py
python/data/src/stk_data/research/: __init__.py  research_header.py
python/data/src/stk_data/scripts/: __init__.py  getSkyrmionShapeScript.py
python/data/src/stk_data/statistics/: __init__.py
python/data/src/stk_data/utils/: __init__.py
python/structure-generator/: LICENSE  README.md  pyproject.toml
python/structure-generator/src/structure_generator/_3D/: generate_phi.py
python/structure-generator/src/structure_generator/_4D/: __init__.py
python/structure-generator/src/structure_generator/basic/: __init__.py  distribution_generator.py  utils.py  write_matrix.py
python/structure-generator/src/structure_generator/comp/: generate_comp.py
python/structure-generator/src/structure_generator/eta/: __init__.py  generate_eta.py
python/structure-generator/src/structure_generator/scripts/: __init__.py  generate_structure.py
python/structure-generator/tests/: input.toml  input_muBreakdown.toml
suan/: .gitignore  README.md  pyproject.toml
suan/cli/: README.md  main.py  main.spec  setup.py
suan/confs/: main.spec  preference.toml  workspace.suan
suan/gui/: build_nsis.nsi  center_widget.py  custom_logger.py  custom_tab_bar.py  info_bar.py  left_sidebar.py  license_agreements.txt  main.py  main.spec  right_sidebar.py  statusbar.py  testpython.py  toolbar.py
suan/gui/Tab/: code_tab.py  data_table_tab.py  preference_tab.py
suan/gui/Updater/: ui_winUpdate.py  ui_winUpdate_ui.py  update.json  updateVersion.py  updateWindow.py
suan/gui/confs/: preference.toml
suan/gui/resources/: styles.qss
suan/python/2D-plotting/: 2D-plotting-template.py
suan/python/data/: research_header.py  statistic.py  util.py  writeDat.py
suan/python/domain-2D/: cxx.py
suan/python/vtk/unorganized/: 3dsurf.py  mayavtk.py  multiview_vtk.py  orientation-legend.py  polarization.py  scalar.py  volumn.py  vtk_vector.py
suan/scripts/: deploy.py  run_write_version.py  update.py
suan/src/Updater/: __init__.py  autoUpdate.py  handleZip.py
toolkit/cpp/data-Restore/: CMakeLists.txt
toolkit/cpp/solvers/fft/: CMakeLists.txt
toolkit/cpp/solvers/fft/test/: test.c
toolkit/cpp/solvers/fft/test/poisson/: meson.build  poisson_criteria.c
(+350 files in other folders)
